# OpenCVDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/angcyo/opencv/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/angcyo/opencv/demo/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
app/src/main/res/layout/: activity_main.xml  fragment_first.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/angcyo/opencv/demo/: ExampleUnitTest.kt
camera-calibration/: build.gradle
camera-calibration/src/androidTest/java/com/angcyo/opencv/camera_calibration/: ExampleInstrumentedTest.java
camera-calibration/src/main/: AndroidManifest.xml
camera-calibration/src/main/java/org/opencv/samples/cameracalibration/: CameraCalibrationActivity.java
camera-calibration/src/test/java/com/angcyo/opencv/camera_calibration/: ExampleUnitTest.java
color-blob-detection/: build.gradle
color-blob-detection/src/androidTest/java/com/angcyo/opencv/color_blob_detection/: ExampleInstrumentedTest.java
color-blob-detection/src/main/: AndroidManifest.xml
color-blob-detection/src/main/java/org/opencv/samples/colorblobdetect/: ColorBlobDetectionActivity.java
color-blob-detection/src/test/java/com/angcyo/opencv/color_blob_detection/: ExampleUnitTest.java
face-detection/: build.gradle
face-detection/src/androidTest/java/com/angcyo/opencv/face_detection/: ExampleInstrumentedTest.java
face-detection/src/main/: AndroidManifest.xml
face-detection/src/main/java/org/opencv/samples/facedetect/: FdActivity.java
gradle/wrapper/: gradle-wrapper.properties
image-manipulations/: build.gradle
image-manipulations/src/main/: AndroidManifest.xml
java/: build.gradle
java/src/main/java/org/opencv/android/: AsyncServiceHelper.java  JavaCameraView.java
java/src/test/java/com/angcyo/opencv/java/: ExampleUnitTest.java
opencv/: .gitignore  build.gradle
opencv/src/androidTest/java/com/angcyo/opencv/: ExampleInstrumentedTest.java
opencv/src/main/: AndroidManifest.xml
opencv/src/main/cpp/: CMakeLists.txt  bmpTogcode.cpp  bmpTogcode.h  bmp_io.cpp  bmp_io.h  gcode.cpp  gcode.h  image.cpp  image.h  opencv.cpp
opencv/src/main/java/com/angcyo/opencv/: OpenCV.kt
opencv/src/test/java/com/angcyo/opencv/: ExampleUnitTest.java
puzzle/: build.gradle
puzzle/src/main/: AndroidManifest.xml
tutorial-1-camerapreview/: build.gradle
tutorial-1-camerapreview/src/main/: AndroidManifest.xml
tutorial-2-mixedprocessing/: build.gradle
tutorial-2-mixedprocessing/src/main/: AndroidManifest.xml
tutorial-3-cameracontrol/: build.gradle
tutorial-3-cameracontrol/src/main/: AndroidManifest.xml
(+18 files in other folders)
